--- a/src/assets/styles/reviews.scss
+++ b/src/assets/styles/reviews.scss
@@ -23,6 +23,22 @@
         border-radius: 50%;
         transform: rotate(-20deg);
         box-shadow: 0 8px 32px 0 $box-shadow-blue2;
+        @media screen and (max-width: 400px) {
+          &{
+            top:-3px;
+            left: 10px;
+            width: 80px;
+            height: 130px;
+          }
+        }
+        @media screen and (max-width: 378px) {
+          &{
+            top:5px;
+            left: 10px;
+            width: 80px;
+            height: 130px;
+          }
+        }
       }
       &__infos{
         display: flex;
